Bug 1421393 - Skip some virtual interfaces (VMWare). r=valentin,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D235476